tests/ui/unknown_key.stderr
error: expected identifier, found `::`
  --> tests/ui/unknown_key.rs:13:11
   |
9  | #[derive(DtoFrom)]
   |          ------- while parsing this struct
...
13 |     #[dto(renmae = "id")]
   |           ^^^^^^ expected identifier

error: proc-macro derive produced unparsable tokens
 --> tests/ui/unknown_key.rs:9:10
  |
9 | #[derive(DtoFrom)]
  |          ^^^^^^^

error[E0063]: missing field `id` in initializer of `Dto`
 --> tests/ui/unknown_key.rs:9:10
  |
9 | #[derive(DtoFrom)]
  |          ^^^^^^^ missing `id`
  |
  = note: this error originates in the derive macro `DtoFrom` (in Nightly builds, run with -Z macro-backtrace for more info)
